convert few loops to lambdas. use var for brevity