@@ -22,15 +22,11 @@ package org.apache.airavata.sharing.services;
 import com.github.dozermapper.core.Mapper;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.TypedQuery;
-import jakarta.persistence.criteria.CriteriaBuilder;
-import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Predicate;
-import jakarta.persistence.criteria.Root;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.apache.airavata.sharing.entities.SharingEntity;
 import org.apache.airavata.sharing.entities.UserEntity;
 import org.apache.airavata.sharing.entities.UserPK;
@@ -89,15 +85,14 @@ public class UserService {
     public List<User> select(String queryString, Map<String, String> filters, int offset, int limit)
             throws SharingRegistryException {
         // Build query with filters using Criteria API
-        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<UserEntity> query = cb.createQuery(UserEntity.class);
-        Root<UserEntity> root = query.from(UserEntity.class);
+        var cb = entityManager.getCriteriaBuilder();
+        var query = cb.createQuery(UserEntity.class);
+        var root = query.from(UserEntity.class);
 
-        List<Predicate> predicates = new ArrayList<>();
+        var predicates = new ArrayList<Predicate>();
         if (filters != null) {
-            for (String key : filters.keySet()) {
-                String value = filters.get(key);
-                predicates.add(cb.equal(root.get(key), value));
+            for (var entry : filters.entrySet()) {
+                predicates.add(cb.equal(root.get(entry.getKey()), entry.getValue()));
             }
         }
         if (!predicates.isEmpty()) {
@@ -112,7 +107,7 @@ public class UserService {
             typedQuery.setMaxResults(limit);
         }
 
-        List<UserEntity> entities = typedQuery.getResultList();
+        var entities = typedQuery.getResultList();
         return entities.stream().map(e -> mapper.map(e, User.class)).toList();
     }
 
@@ -139,12 +134,12 @@ public class UserService {
     private List<User> getAccessibleUsersInternal(
             String domainId, String entityId, String permissionTypeId, SharingType... sharingTypes)
             throws SharingRegistryException {
-        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<UserEntity> query = cb.createQuery(UserEntity.class);
-        Root<UserEntity> userRoot = query.from(UserEntity.class);
-        Root<SharingEntity> sharingRoot = query.from(SharingEntity.class);
+        var cb = entityManager.getCriteriaBuilder();
+        var query = cb.createQuery(UserEntity.class);
+        var userRoot = query.from(UserEntity.class);
+        var sharingRoot = query.from(SharingEntity.class);
 
-        List<Predicate> predicates = new ArrayList<>();
+        var predicates = new ArrayList<Predicate>();
         predicates.add(cb.equal(userRoot.get("userId"), sharingRoot.get("groupId")));
         predicates.add(cb.equal(userRoot.get("domainId"), sharingRoot.get("domainId")));
         predicates.add(cb.equal(userRoot.get("domainId"), domainId));
@@ -153,7 +148,7 @@ public class UserService {
 
         if (!Arrays.asList(sharingTypes).isEmpty()) {
             List<String> sharingTypeNames =
-                    Arrays.asList(sharingTypes).stream().map(SharingType::name).collect(Collectors.toList());
+                    Arrays.stream(sharingTypes).map(SharingType::name).toList();
             predicates.add(sharingRoot.get("sharingType").in(sharingTypeNames));
         }
 
